# CS3793_assignment_05

./: .gitignore  CMakeLists.txt  bp.c  bp.h  prt.c  readMNIST.c
